Fix for too much info on main page

--- a/www/css/first_run.css
+++ b/www/css/first_run.css
@@ -41,10 +41,13 @@
         body.firstrun #first_run .blurb {
             left: 10vw;
             width: 85vw;
+            max-height: 60%;
+            overflow: auto;
+            font-size: 0.8em;
         }
 
         body.firstrun #first_run .logo {
-            width: 70vw;
+            width: 50vw;
             margin: auto;
         }
     }
